# uda-results-extractor

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: cargo.toml
resources/: cfm2023.xls  unicon20.xls
src/: competition.rs  competition_result.rs  competitor.rs  competitor_name.rs  convention.rs  convention_results.rs  gender.rs  main.rs  place.rs  result_entry.rs  result_type.rs
src/competition/: competition.rs  competition_result.rs  mod.rs
src/competitor/: competitor.rs  gender.rs  individual_competitor.rs  mod.rs  team.rs  unknown_individual_competitor.rs
src/convention/: convention.rs  mod.rs
src/download/: mod.rs
src/person/: identity.rs  mod.rs  person.rs  person_name.rs
src/raw_result/: mod.rs  raw_result.rs
src/registration/: mod.rs  registrant.rs  registration.rs
src/result/: age_group.rs  mod.rs  place.rs  result_type.rs  result_value.rs
src/utils/: credentials.rs  env_manager.rs  mod.rs
