[package]
name = "uda-results-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.23.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
derive-getters = "0.3.0"
deunicode = "1.4.2"
log = "0.4.20"
env_logger = { version = "0.11.0", features = [] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["cookies"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
scraper = "0.18.1"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
itertools = "0.12.0"